# server

./: .csc  .dockerignore  .env.local.example  .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.example.toml  deny.toml  justfile  rust-toolchain.toml
.github/workflows/: publish-image.yml
docs/adr/: ADR-0001-sync-bridge-architecture.md  ADR-0002-design-simplicity-principles.md  ADR-0003-device-registry-per-device-crypto.md  ADR-0004-control-plane-boundary-for-device-onboarding.md  ADR-0005-operator-http-auth-boundary.md  ADR-0006-operator-surface-scope.md  ADR-0007-trusted-proxy-and-forwarded-header-model.md  ADR-0008-standalone-server-documentation-principles.md
docs/implementation/: geofence-typed-api-implementation-note.md  http-dto-validation-with-garde-note.md  (+3 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: filter_parse.rs  task_raw_parse.rs  tc_sync_content_type.rs  webhook_request_normalization.rs
migrations/: 001_create_users.sql  002_create_contexts.sql  003_create_views.sql  004_create_presets.sql  005_create_stores.sql  006_create_geofences.sql  007_create_config.sql  008_create_sync_clients.sql  009_create_replicas.sql  010_views_add_origin.sql  011_views_add_display_mode.sql  012_create_devices.sql  013_devices_add_encryption.sql  014_devices_add_bootstrap_state.sql  015_backfill_migrated_device_secrets.sql  016_create_user_runtime_policies.sql  017_api_tokens_add_usage_tracking.sql  018_api_tokens_add_token_id.sql  019_create_webhooks.sql  020_create_webhook_event_history.sql  021_create_admin_webhooks.sql  022_views_add_context_id.sql
scripts/: _docs_corpus.py  cl.sh  cx.sh  deploy.sh  docs_rubric_assess.py  load-test.sh  load_test_seed.py  publication_surface_allowlist.txt  publication_surface_check.py  real-sync-load.sh  remote-tw-smoke.sh  staging-test.sh  staging_admin_runtime.py  staging_backup_restore.py  staging_product_runtime.py  staging_verify.py  staging_verify_legacy.sh  staging_webhooks_runtime.py  test-bubble.sh  test-sync.sh  upgrade.sh
src/: app_state.rs  audit.rs  circuit_breaker.rs  config.rs  connect_config.rs  crypto.rs  lib.rs  main.rs  metrics.rs  recovery.rs  replica.rs  runtime_policy.rs  runtime_recovery.rs  runtime_sync.rs  sync_bridge.rs  sync_identity.rs  user_runtime.rs  validation.rs
src/auth/: mod.rs  (+4 more)
tests/: admin_cli_integration.rs  admin_console_integration.rs  admin_device_cli_integration.rs  admin_integration.rs  admin_recovery_cli_integration.rs  app_config_integration.rs  auth_integration.rs  backup_restore_integration.rs  body_limits_integration.rs  concurrency_integration.rs  config_api_integration.rs  corruption_integration.rs  devices_integration.rs  geofences_integration.rs  me_integration.rs  metrics_integration.rs  production_safety_integration.rs  recovery_e2e_integration.rs  self_hosted_onboarding_system.rs  summary_integration.rs  sync_bridge_integration.rs  tasks_integration.rs  tc_sync_integration.rs  views_integration.rs  webhook_scheduler_integration.rs  webhooks_integration.rs
(+130 files in other folders)
