[package]
name = "cmdock-server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.cmdock-server]
path = ".."

[[bin]]
name = "filter_parse"
path = "fuzz_targets/filter_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "task_raw_parse"
path = "fuzz_targets/task_raw_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tc_sync_content_type"
path = "fuzz_targets/tc_sync_content_type.rs"
test = false
doc = false
bench = false

[[bin]]
name = "webhook_request_normalization"
path = "fuzz_targets/webhook_request_normalization.rs"
test = false
doc = false
bench = false
